--- a/OneDrive/Desktop/Project2/index.html
+++ b/OneDrive/Desktop/Project2/index.html
@@ -62,7 +62,7 @@
                     <input type="text" class="form-input" placeholder="City" required>
                 </div>
             </form>
-            <button class="submit-btn1">Submit Form</button>
+            <button class="submit-btn">Submit Form</button>
         </div>
     </section>
 
